2007-03-19  Eitan Isaacson  <eitan@ascender.com>

	* src/accerciser.glade: Removed old help dialog.
	* src/lib/accerciser/accerciser.py: Added epydoc
	docstrings. Removed obsolete methods.

2007-03-18  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/accerciser.py: Show dialog and quit when
	desktop accessibility is disabled (bug 418842).
	
2007-03-16 Peter Parente  <parente@cs.unc.edu>

	* pyreqs.py: Fixed check for wnck when building RPM
	* configure.in: Post release version increment

2007-03-15  Eitan Isaacson  <eitan@ascender.com>

	* plugins/Makefile.am: 
	* plugins/script_recorder.py: Added script_recorder.py (bug 419129).
	* src/lib/accerciser/Makefile.am: 
	* src/lib/accerciser/script_playback.py: Added script_playback.py 
	(bug 419129).

2007-03-15 Peter Parente  <parente@cs.unc.edu>

	* pyreqs.py: Added check for wnck

2007-03-15  Eitan Isaacson  <eitan@ascender.com>

	* configure.in: removed accerciser.xml from generated
	files. distcheck was not succeeding with it for some reason.
	* help/C/accerciser.xml.in: Deleted.
	* help/C/accerciser.xml: Added.
	* help/Makefile.am: Removed C/accerciser.xml.in from EXTRA_DIST.

2007-03-15  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.py: Removed debug prints.
	* plugins/ipython_view.py: Removed debug prints.
	* src/lib/accerciser/accerciser.py: Added program version to
	'about' dialog.
	* src/lib/accerciser/plugin.py: Removed debug prints.
	* src/lib/accerciser/tools.py: Removed debug prints.

2007-03-15  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade: Unexpanded table interface view.
	* src/lib/accerciser/accerciser.py: Changes due to changed
	settings scheme.
	* src/lib/accerciser/plugin_manager.py: Added hardcoded default 
	settings.
	* src/lib/accerciser/tools.py: Changed persisted settings scheme
	to an INI format file (~/.accerciser/accerciser.conf).
	
2007-03-14  Eitan Isaacson  <eitan@ascender.com>

	* plugins/event_monitor.glade: