@@ -29,16 +29,55 @@ COL_FILLED = 4
 COL_ACC = 5
 
 class AccessibleModel(gtk.TreeStore, Tools):
+  '''
+  Stores the desktop accessible tree. Only populates sections of the tree
+  that are being viewed. This cuts short on a lot of potential overhead.
+
+  @ivar desktop: The desktop accessible. It holds references to all the 
+  application L{pyLinAcc.Accessible}s
+  @type desktop: L{pyLinAcc.Accessible}
+  @ivar acc_cache: A list of L{pyLinAcc.Accessible}s that are currently
+  resident in the model. This helps with faster searching.
+  @type acc_cache: list
+  '''
   def __init__(self, desktop_acc):
+    '''
+    Initializes the L{AccessibleModel} and all of the needed instant variables.
+    Connects required signals.
+    '''
     self.acc_cache = [desktop_acc]
     gtk.TreeStore.__init__(self, gtk.gdk.Pixbuf, str, str, str, bool, object)
     self.connect('row-changed', self._onRowChanged)
     self.desktop = desktop_acc
 
   def _onRowChanged(self, model, path, iter):
+    '''
+    A callback on "row-changed" that pre-populates a given row when it changes.
+
+    @param model: This model.
+    @type model: L{AccessibleModel}
+    @param path: The path to the row that changed.
+    @type path: tuple
+    @param iter: the iter of the row that changed.
+    @type iter: L{gtk.TreeIter}
+    '''
     self._prepopLevel(model[iter][COL_ACC], iter)
 
   def insert(self, iter, index, row):
+    '''
+    A method that overrides the L{gtk.TreeStore} insert method.
+    Pre-populate and add the new accessible to acc_cache.
+
+    @param iter: The parent iter of the newly inserted row.
+    @type iter: L{gtk.TreeIter}
+    @param index: The place in which to insert the new row.
+    @type index: integer
+    @param row: A list of columns o insert into the row,
+    @type row: list
+
+    @return: The newly created iter of the inserted row.
+    @rtype: L{gtk.TreeIter}
+    '''
     acc = row[COL_ACC]
     if acc:
       self.acc_cache.append(acc)
@@ -46,29 +85,94 @@ class AccessibleModel(gtk.TreeStore, Tools):
     self._prepopLevel(acc, new_iter)
 
   def append(self, iter, row):
-    self.insert(iter, -1, row)
+    '''
+    A method that overrides the L{gtk.TreeStore} append method.
+    Pre-populate and add the new accessible to acc_cache.
 
+    @param iter: The parent iter of the newly inseted row.
+    @type iter: L{gtk.TreeIter}
+    @param row: A list of columns o insert into the row,
+    @type row: list
+
+    @return: The newly created iter of the inserted row.
+    @rtype: L{gtk.TreeIter}
+    '''
+    self.insert(iter, -1, row)
+    
   def remove(self, iter):
+    '''
+    A method that overrides the L{gtk.TreeStore} remove method.
+    Remove the row's accessible from acc_cache.
+
+    @param iter: The parent iter of the newly inserted row.
+    @type iter: L{gtk.TreeIter}
+
+    @return: True if L{iter} is still valid.
+    @rtype: boolean
+    '''
     if self[iter][COL_ACC]:
       self.acc_cache.remove(self[iter][COL_ACC])
     return gtk.TreeStore.remove(self, iter)
 
   def isInModel(self, acc):
+    '''
+    Checks if the given L{pyLinAcc.Accessible} is resident in the model.
+
+    @param acc: The L{pyLinAcc.Accessible} to check.
+    @type acc: L{pyLinAcc.Accessible}
+
+    @return: True if it is in the model.
+    @rtype: boolean
+    '''
     return acc in self.acc_cache
 
   def getChildrenAccs(self, iter):
+    '''
+    Get list of accessible children of a given row.
+
+    I{Note:} This method returns the accessible's children as they currently exist in 
+    the model. The list of accessibles is not necessarily identical to the actual 
+    children of the accessible at the given row.
+
+    @param iter: Th iter of the row that we want it's children
+    @type iter: L{gtk.TreeIter}
+
+    @return: List of children
+    @rtype: list
+    '''
     if iter:
       return [row[COL_ACC] for row in self[iter].iterchildren()]
     else:
       return [row[COL_ACC] for row in self]
 
   def _prepopLevel(self, parent, iter):
+    '''
+    Pre-populate a row. If a L{pyLinAcc.Accessible} of the given row has children,
+    we need to add to it one dummy child row so that the expander will show and
+    enable the user to expand it. We populate the children rows at expansion time.
+
+    @param parent: The given row's accessible.
+    @type parent: L{pyLinAcc.Accessible}
+    @param iter: Th iter of the row that needs to be pre-populated
+    @type iter: L{gtk.TreeIter}
+    '''
     if (parent and parent.childCount > 0 and 
         not self.isMyApp(parent) and self.iter_n_children(iter) == 0):
       row = self._buildRow(None, False)
       self.append(iter, row)
 
   def popLevel(self, parent, iter):
+    '''
+    Populate a row with children rows, according to the row's accessible's children.
+
+    @param parent: The given row's accessible.
+    @type parent: L{pyLinAcc.Accessible}
+    @param iter: Th iter of the row that needs to be populated
+    @type iter: L{gtk.TreeIter}
+    
+    @return: A list of L{gtk.TreeIter}s that have been inserted.
+    @rtype: list
+    '''
     iters = []
     if parent is None:
       return iters
@@ -83,6 +187,17 @@ class AccessibleModel(gtk.TreeStore, Tools):
     return iters
 
   def getAccPath(self, acc):
+    '''
+    Get the tree path that a given accessible should have.
+    
+    I{Note:} The accessible does not necessarily need to be resident in the model.
+    
+    @param acc: The accessible we want a path of.
+    @type acc: L{pyLinAcc.Accessible}
+    
+    @return: The path to the accessible.
+    @rtype: tuple
+    '''
     path = ()
     child = acc
     while child.parent:
@@ -124,13 +239,34 @@ class AccessibleModel(gtk.TreeStore, Tools):
     return [icon, name, role, count, filled, accessible]
 
 class AccessibleTreeView(gtk.TreeView, Tools):
+  '''
+  The treeview for the desktop's accessibles. The treeview's model (L{AccessibleModel}
+  is only populated when the treeview is traversed and nodes are expanded. This class
+  listens for 'row-expanded' events in order to have a tree node populated. Nodes that
+  are selected are updated into the L{Node} instance variable. This treeview also 
+  updates automatically in response to at-spi children change events.
+
+  @ivar desktop: The desktop accessible. It holds references to all the 
+  application L{pyLinAcc.Accessible}s
+  @type desktop: L{pyLinAcc.Accessible}
+  @ivar node: An object with a reference to the currently selected accessible.
+  @type node: L{Node}
+  @ivar model: The data model of this treeview.
+  @type model: L{AccessibleModel}
+  @ivar event_manager: The event manager we use for handling at-spi events.
+  @type event_manager: L{pyLinAcc.Event.Manager}
+  '''
   def __init__(self):
+    '''
+    Initialize the treeview. Build the proper columns.
+    Connect all of the proper signal handlers and at-spi event handlers.
+    '''
     gtk.TreeView.__init__(self)
 
     self.desktop = pyLinAcc.Registry.getDesktop(0)
     self.node = Node()
     self.node.update(self.desktop)
-    self.changed_handler = self.node.connect('accessible_changed',
+    self._changed_handler = self.node.connect('accessible_changed',
                                              self._onAccChanged)
     self.connect('row-activated', self._onRowActivated)
 
@@ -174,6 +310,10 @@ class AccessibleTreeView(gtk.TreeView, Tools):
                                  'object:children-changed')
 
   def destroy(self):
+    '''
+    Overrides superclass's destroy method.
+    Used for explicitly closing the L{pyLinAcc.Event.Manager} or bad things happen.
+    '''
     self.event_manager.close()
     gtk.TreeView.destroy(self)
 
@@ -197,11 +337,17 @@ class AccessibleTreeView(gtk.TreeView, Tools):
       self.expand_row(self.model.get_path(iter), False)
       self._onExpanded(self, iter, self.model.get_path(iter))
 
-  def _onExpanded(self, tv, iter, path):
+  def _onExpanded(self, treeview, iter, path):
     '''
     Populates a level when it is expanded. Removes the previously added dummy
-    node. Pre-populates the next level so expand spinners are correctly shown
-    for all children having children.
+    node.
+
+    @param treeview: The L{AccessibleTreeView} that emitted the signal.
+    @type treeview: L{AccessibleTreeView}
+    @param iter: The iter that has been expanded.
+    @type iter: L{gtk.TreeIter}
+    @param path: The path to the row that has been expanded.
+    @type path: tuple
     '''
     # don't repopulate if it has been filled before
     if self.model[iter][COL_FILLED]:
@@ -214,6 +360,12 @@ class AccessibleTreeView(gtk.TreeView, Tools):
     self.model.remove(self.model.iter_children(iter))
 
   def _accEventChildChanged(self, event):
+    '''
+    Event handler for "object:children-changed". Updates the treeview accordingly.
+    
+    @param event: The event which triggered this handler.
+    @type event: L{pyLinAcc.Event}
+    '''
     if self.isMyApp(event.source):
       # Bad karma
       return
@@ -233,6 +385,14 @@ class AccessibleTreeView(gtk.TreeView, Tools):
         self.model[iter][COL_CHILDCOUNT] = str(event.source.childCount)
 
   def _addChild(self, iter, parent):
+    '''
+    Add the new child to the given accessible.
+
+    @param iter: Th iter of the row that needs a child added. 
+    @type iter: L{gtk.TreeIter}
+    @param parent: The given row's accessible.
+    @type parent: L{pyLinAcc.Accessible}
+    '''
     old_children = set(self.model.getChildrenAccs(iter))
     new_children = set(list(parent))
     added = new_children.difference(old_children)
@@ -253,6 +413,13 @@ class AccessibleTreeView(gtk.TreeView, Tools):
       gobject.timeout_add(1000, self._refreshIcon, new_child)
     
   def _refreshIcon(self, app):
+    '''
+    Refresh the icon of a given application's accessible. This is done because it
+    takes wnck a while to load an application's icon at application startup.
+
+    @param app: The given application's accessible.
+    @type app: L{pyLinAcc.Accessible}
+    '''
     path = self.model.getAccPath(app)
     try:
       self.model[path][COL_ICON] = getIcon(app)
@@ -261,6 +428,14 @@ class AccessibleTreeView(gtk.TreeView, Tools):
     return False
 
   def _removeChild(self, parent_iter, parent):
+    '''
+    Remove a child from the given accessible node.
+
+    @param parent_iter: Th iter of the row that needs a child removed. 
+    @type parent_iter: L{gtk.TreeIter}
+    @param parent: The given row's accessible.
+    @type parent: L{pyLinAcc.Accessible}
+    '''
     if parent_iter:
       iter = self.model.iter_children(parent_iter)
     else:
@@ -274,6 +449,12 @@ class AccessibleTreeView(gtk.TreeView, Tools):
 
 
   def _refreshChildren(self, iter):
+    '''
+    Remove all of a given node's children from the model.
+
+    @param iter: The parent node.
+    @type iter: L{gtk.TreeIter}
+    '''
     if not iter:
       self.refreshTopLevel()
       return
@@ -286,11 +467,21 @@ class AccessibleTreeView(gtk.TreeView, Tools):
     self.model[iter][COL_FILLED] = False
 
   def refreshSelected(self):
+    '''
+    Manually refresh the selected node.
+    '''
     selection = self.get_selection()
     model, iter = selection.get_selected()
     self._refreshChildren(iter)
 
   def _onSelectionChanged(self, selection):
+    '''
+    Update the accessible according to the selected row.
+
+    @param selection: The selection object that emitted the the 'selection-changed'
+    signal.
+    @type selection: L{gtk.TreeSelection}
+    '''
     model, iter = selection.get_selected()
     try:
       new_acc = model[iter][COL_ACC]
@@ -298,11 +489,19 @@ class AccessibleTreeView(gtk.TreeView, Tools):
       new_acc = self.desktop
     if new_acc == self.node.acc:
       return
-    self.node.handler_block(self.changed_handler)
+    self.node.handler_block(self._changed_handler)
     self.node.update(new_acc)
-    self.node.handler_unblock(self.changed_handler)
+    self.node.handler_unblock(self._changed_handler)
 
   def _onAccChanged(self, node, acc):
+    '''
+    Change the treeview's selection to the updated accessible in the L{Node}.
+
+    @param node: The L{node} that emitted the signal.
+    @type node: L{Node}
+    @param acc: The new accessible in the node.
+    @type acc: L{pyLinAcc.Accessible}
+    '''
     if self.isMyApp(acc):
       # Bad karma
       return
@@ -319,6 +518,18 @@ class AccessibleTreeView(gtk.TreeView, Tools):
       pass
 
   def _accCellDataFunc(self, tvc, cellrenderer, model, iter):
+    '''
+    A cellrenderer data function. renderer's this application's node as insensitive.
+
+    @param tvc: A treeview column.
+    @type tvc: L{gtk.TreeViewColumn}
+    @param cellrenderer: The cellrenderer that needs to be tweaked.
+    @type cellrenderer: L{gtk.CellRenderer}
+    @param model: The treeview's data model.
+    @type model: L{AccessibleModel}
+    @param iter: The iter at the given row.
+    @type iter: L{gtk.TreeIter}
+    '''
     if model.iter_is_valid(iter):
       acc = model.get_value(iter, COL_ACC)
     else:
@@ -329,8 +540,34 @@ class AccessibleTreeView(gtk.TreeView, Tools):
       cellrenderer.set_property('sensitive', True)
 
   def _selectFunc(self, selection, model, path, is_selected):
+    '''
+    A selection function. Does not allow his application's node to be selected.
+
+    @param selection: The given selection object.
+    @type selection: L{gtk.TreeSelection}
+    @param model:The treeview's data model.
+    @type model: L{AccessibleModel}
+    @param path: The path to the selected row.
+    @type path: tuple
+    @param is_selected: True if the path is selected.
+    @type is_selected: boolean
+
+    @return: True if the row's accessible is not this app.
+    @rtype: boolean
+    '''
     acc = model[path][COL_ACC]
     return not self.isMyApp(acc)
 
   def _onRowActivated(self, treeview, path, view_column):
+    '''
+    When the row is activated (double clicked, or enter), blink the selected 
+    accessible, if possible.
+
+    @param treeview: The L{AccessibleTreeView} that emitted the signal.
+    @type treeview: L{AccessibleTreeView}
+    @param path: The path to the selected row.
+    @type path: tuple
+    @param view_column: The column in the activated row.
+    @type view_column: L{gtk.TreeViewColumn}
+    '''
     self.node.blinkRect()
