@@ -1,3 +1,11 @@
+2007-03-20  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/accerciser.py: 
+	* src/lib/accerciser/plugin_manager.py: Fixed bottom pane being always
+	set to 350 no matter what size it was saved at last session.
+	* src/lib/accerciser/accessible_treeview.py: Added epydoc
+	docstrings.
+	
 2007-03-19  Eitan Isaacson  <eitan@ascender.com>
 
 	* src/accerciser.glade: Removed old help dialog.
